--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
-
-		implementation 'org.apache.kafka:kafka-clients:2.8.0'
-		implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+		implementation 'org.apache.kafka:kafka-clients'
+		implementation 'com.fasterxml.jackson.core:jackson-databind'
 	}
 
 tasks.named('test') {
