--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 # Kafka Producer Configuration
-spring.kafka.producer.bootstrap-servers=9092
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-server.port=8081
+server.port=8089
+kafka.topic.name=Harshit
+Spring.data.Mongodb.database=OMS
+Spring.data.Mongodb.host=localhost:27017
+#spring.datasource.url = jdbc:mysql://localhost:3306/Form
+#spring.datasource.username =root
+#Spring.datasource.password=admin
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
