--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 		implementation 'org.apache.kafka:kafka-clients'
 		implementation 'com.fasterxml.jackson.core:jackson-databind'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	}
 
 tasks.named('test') {
